--- a/surfboard.conf
+++ b/surfboard.conf
@@ -1,30 +1,13 @@
 [General]
-wifi-assist = true
-proxy-test-url = http://cp.cloudflare.com/generate_204
-internet-test-url = http://www.gstatic.com/generate_204
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
+dns-server = 45.90.28.133, 45.90.30.133, system
+always-real-ip = stun.l.google.com
+proxy-test-url = http://www.gstatic.com/generate_204
+internet-test-url = http://www.gstatic.cn/generate_204
 test-timeout = 5
-dns-server = system
-exclude-simple-hostnames = true
-use-local-host-item-for-proxy = true
-loglevel = warning
-include-all-networks = false
-include-local-networks = false
-udp-policy-not-supported-behaviour = reject
-use-default-policy-if-wifi-not-primary = true
-hijack-dns = *:53
-allow-wifi-access = true
-skip-proxy = 192.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.1, 100.64.0.0/10, localhost, *.local, 255.255.255.255/32, iosapps.itunes.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com, captive.apple.com, mzstorekit.itunes.apple.com, gateway.icloud.com, *.icloud-content.com, xp.apple.com, gsa.apple.com, *.mzstatic.com, 104.18.225.52
-always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com, *.minutemediacdn.com
-ipv6 = true
-ipv6-vif = auto
-allow-hotspot-access = false
-show-error-page-for-reject = true
-force-http-engine-hosts = *.googlevideo.com, *:80
-encrypted-dns-server = quic://dns.nextdns.io/6c942c
-doh-skip-cert-verification = true
-# fast-switch = true
-udp-priority = true
-compatibility-mode = 3
+udp-policy-not-supported-behaviour = DIRECT
+
+[Host]
 
 [Proxy]
 On = direct
@@ -43,28 +26,7 @@ Off = reject
 
 [Proxy Group]
 SelectGroup = select, include-all-proxies = true, DIRECT, REJECT
-FACEBOOK = select, include-all-proxies = true, DIRECT
-YOUTUBE = select, include-all-proxies = true, DIRECT
-TELEGRAM = select, include-all-proxies = true, DIRECT
-AutoTestGroup = url-test, include-all-proxies = true, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
-ADVERTISING = select, DIRECT, update-interval=604800, no-alert=0, hidden=0, include-all-proxies = true
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list,FACEBOOK,update-interval=604800
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,YOUTUBE,update-interval=604800
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,TELEGRAM,update-interval=604800
-GEOIP,VN,REJECT
+GEOIP,CN,DIRECT
 FINAL,SelectGroup
-
-[Host]
-
-[URL Rewrite]
-
-[SSID Setting]
-
-[MITM]
-skip-server-cert-verify = true
-tcp-connection = true
-h2 = true
-client-source-address = 127.0.0.1, 192.168.1.0/24
-
