--- a/surfboard.conf
+++ b/surfboard.conf
@@ -12,21 +12,19 @@ udp-policy-not-supported-behaviour = DIRECT
 [Proxy]
 On = direct
 Off = reject
-🇻🇳VN3 = socks5, 103.104.117.174, 5124, hvk, hvk@2023, udp-relay=false
-🇻🇳VN1 = vmess, 103.104.117.174, 80, username=b0dce35e-418f-4658-9223-9eaccea4f607, udp-relay=false, ws=true, tls=true, ws-path=/hvkvn, sni=dl.kgvn.garenanow.com, vmess-aead=true
+🇻🇳VN1 = socks5, 103.104.117.174, 5124, hvk, hvk@2023, udp-relay=false
 🇻🇳VN2 = trojan, 103.104.117.174, 443, password=b0dce35e-418f-4658-9223-9eaccea4f607, udp-relay=false, skip-cert-verify=true, sni=dl.kgvn.garenanow.com
-🇸🇬SG1 = vmess, 178.128.86.212, 80, username=863c2a39-a4ce-4830-91c1-ec639fbc0dea, udp-relay=false, ws=true, tls=true, ws-path=/wasabi, sni=dl.kgvn.garenanow.com, vmess-aead=true
-🇸🇬SG2 = trojan, sg1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
+🇸🇬SG = trojan, sg1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
 🇯🇵JP = trojan, jp1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
 🇺🇸US = trojan, us1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
 🇰🇷KR = trojan, kr1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
 🇭🇰HK = trojan, hk1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
-🇻🇳VN4 = trojan, vn1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
-🇻🇳VN5 = trojan, vn2.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
+🇻🇳VN3 = trojan, vn1.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
+🇻🇳VN4 = trojan, vn2.hinet.dev, 443, password=828a79a6-af4b-43c9-8885-d86e1193a325, skip-cert-verify=true, sni=dl.kgvn.garenanow.com, tfo=true
 
 [Proxy Group]
 SelectGroup = select, include-all-proxies = true, DIRECT, REJECT
 
 [Rule]
-GEOIP,CN,DIRECT
+GEOIP,VN,DIRECT
 FINAL,SelectGroup
