--- a/surfboard.conf
+++ b/surfboard.conf
@@ -24,7 +24,17 @@ Off = reject
 
 [Proxy Group]
 SelectGroup = select, include-all-proxies = true, DIRECT, REJECT
+ADVERTISING = select, REJECT-TINYGIF, REJECT-DROP, REJECT-NO-DROP, REJECT, DIRECT, update-interval=604800, no-alert=0, hidden=0, include-all-proxies = true
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT,update-interval=21600
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rule.conf,ADVERTISING,update-interval=21600
+#RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-OTA.conf,ADVERTISING,update-interval=21600
+#RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-FB.conf,ADVERTISING,update-interval=21600
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rewrite.conf,ADVERTISING,update-interval=21600
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/adult/surge-rule.conf,ADVERTISING,update-interval=21600
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/gambling/surge-rule.conf,ADVERTISING,update-interval=21600
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/threat/surge-rule.conf,ADVERTISING,update-interval=21600
+IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 GEOIP,VN,DIRECT
 FINAL,SelectGroup
