--- a/surfboard.conf
+++ b/surfboard.conf
@@ -24,7 +24,7 @@ Off = reject
 
 [Proxy Group]
 SelectGroup = select, include-all-proxies = true, DIRECT, REJECT
-ADVERTISING = select, REJECT-TINYGIF, REJECT-DROP, REJECT-NO-DROP, REJECT, DIRECT, update-interval=604800, no-alert=0, hidden=0, include-all-proxies = true
+ADVERTISING = select, DIRECT, update-interval=604800, no-alert=0, hidden=0, include-all-proxies = true
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT,update-interval=21600
