--- a/surfboard.conf
+++ b/surfboard.conf
@@ -24,9 +24,14 @@ Off = reject
 
 [Proxy Group]
 SelectGroup = select, include-all-proxies = true, DIRECT, REJECT
-ADVERTISING = select, DIRECT, update-interval=604800, no-alert=0, hidden=0, include-all-proxies = true
+FACEBOOK = url-test, include-all-proxies = true, DIRECT, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
+YOUTUBE = url-test, include-all-proxies = true, DIRECT, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
+TELEGRAM = url-test, include-all-proxies = true, DIRECT, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list,FACEBOOK,update-interval=604800
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,YOUTUBE,update-interval=604800
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,TELEGRAM,update-interval=604800
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT,update-interval=21600
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rule.conf,ADVERTISING,update-interval=21600
 #RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-OTA.conf,ADVERTISING,update-interval=21600
