--- a/surfboard.conf
+++ b/surfboard.conf
@@ -2,8 +2,8 @@
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
 dns-server = 45.90.28.133, 45.90.30.133, system
 always-real-ip = stun.l.google.com
-proxy-test-url = http://www.gstatic.com/generate_204
-internet-test-url = http://www.gstatic.cn/generate_204
+proxy-test-url = http://cp.cloudflare.com/generate_204
+internet-test-url = http://www.gstatic.com/generate_204
 test-timeout = 5
 udp-policy-not-supported-behaviour = DIRECT
 
